# DeveloperHub4

./: db.sqlite3  package-lock.json  package.json  pyproject.toml  replit.nix
analytics/: admin.py  models.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_lessonchange_project.py  0003_lessonchange_user.py
analytics/templates/analytics/: index.html
content_generation/: admin.py  forms.py  models.py  urls.py  views.py
content_generation/migrations/: 0001_initial.py  0002_course_user.py
content_generation/templates/: base.html
content_generation/templates/content_generation/: base.html  course_creation.html  course_form.html  create_learning_activity.html  create_learning_outcome.html  create_rubric.html  dashboard.html  edit_lesson_plan.html  edit_plan_of_instruction.html  edit_project.html  gpt2_input.html  gpt2_output.html  index.html  learning_outcome_form.html  login.html  (+9 more)
django_project/: settings.py  urls.py
export_share/: admin.py  apps.py  models.py  urls.py  views.py
export_share/migrations/: 0001_initial.py  0002_initial.py
machine_learning/: admin.py  models.py  urls.py  views.py
machine_learning/migrations/: 0001_initial.py  0002_predictedcontent_project.py
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py
static/: firebaseconfig.js
static/css/: custom.css  styles.css
templates/: base.html
user_profiles/: firebase_auth_backend.py  forms.py  models.py  urls.py  views.py
user_profiles/migrations/: 0001_initial.py  0002_auto_20231104_0007.py
(+29 files in other folders)
