[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
firebase-admin = "^6.2.0"
projects = "^1.0.9"
Pillow = "10.1.0"
[tool.poetry.dev-dependencies]

# Dependencies identified:
# Django version 3.0 or higher
# Python version 3.8 or higher
# projects version 1.0.9 or higher